[package]
name = "lumos"
version = "0.0.7"
edition = "2024"
description = "CLI tool to detect whether your terminal is in light or dark mode"
repository = "https://github.com/dargor/lumos"
license = "MIT"
keywords = ["terminal", "light", "dark", "theme", "background"]
categories = ["command-line-utilities", "development-tools"]
# disable publishing, for now
publish = false

[package.metadata]
authors = ["Gabriel Linder <linder.gabriel@gmail.com>"]
maintainers = ["Gabriel Linder <linder.gabriel@gmail.com>"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "forbid"
unsafe_code = "forbid"

[dependencies]
anyhow = "1.0.99"
regex = "1.11.2"
termios = "0.3.3"
nix = { version = "0.30.1", features = ["fs", "poll"] }
